feat(tf-api): dispatch search to module
